--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,7 @@
 @import 'style-textos';
 @import 'header';
 @import 'cards';
+@import 'form';
 @import 'faqs';
 @import 'footer';
 @import 'mediaqueries';
