--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -21,3 +21,13 @@
   color: #ffffff; /* Color del texto del botón */
   /* Puedes añadir más estilos según sea necesario */
 }
+
+.navbar-toggler-icon {
+ /* Cambiar el color del ícono a blanco */
+  filter: invert(1);
+}
+
+.navbar-toggler {
+  border: none; /* Quitar el borde */
+
+}
