--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -1,54 +1,75 @@
 /*////////////////////////// FORM ////////////////////////// */
 
-
 .contact-form {
   width: 80%;
+}
 
-  .form-group {
-    margin-bottom: 30px;
+.form-group {
+  margin-bottom: 30px;
+}
 
-    label {
-      display: block;
-      margin-bottom: 5px;
-      font-weight: bold;
-    }
+.form-group label {
+  
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
 
-    input,
-    select,
-    textarea {
-      width: 100%;
-      padding: 0.5rem;
-      font-size: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 0.25rem;
-    }
+.form-group input[type="text"],
+.form-group input[type="email"],
+.form-group select,
+.form-group textarea {
+  color: $color-03;
+  font-size: 0.9rem;
+  width: 100%;
+  padding: 0.5rem;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 0.25rem;
+}
 
-    textarea {
-      height: 100px; 
-    }
-  }
+.form-group select option {
+  color: $color-03; /* Cambiar aquí el color del texto */
+}
 
-  .submit-btn {
-    font-size: 0.9rem;
-    text-align: center;
-    background-image: linear-gradient(to bottom, $color-05, $color-04);
-    color: #ffffff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    text-decoration: none;
-    width: 50%;
 
-    &:hover {
-      background-color: #0056b3;
-    }
+.form-group textarea {
+  height: 100px; 
+}
+
+.form-group .radio-group {
+  margin-bottom: 10px;
+  
+
+  label {
+    display: inline-block;
+    margin-right: 10px;
+    color: $color-03;
   }
 }
 
+.submit-btn {
+  font-size: 0.9rem;
+  text-align: center;
+  background-image: linear-gradient(to bottom, $color-05, $color-04);
+  color: #ffffff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  text-decoration: none;
+  width: 50%;
+}
 
 .radio-container {
-  @include flex-center;
-  @include no-mp;
+  @include flex-center; /* Aplica el mixin para centrar los radios */
+  margin-top: 10px;
 }
+
+.radio-container input[type="radio"],
+.radio-container label {
+  margin: 0 5px; /* Espacio entre radios y etiquetas */
+}
+
+
 
