--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,8 +1,8 @@
 @import 'variables';
 @import 'mixin';
 @import 'reset';
+@import 'mapping';
 @import 'general';
-@import 'style-colors';
 @import 'style-textos';
 @import 'header';
 @import 'cards';
