quize cambiar el nombre de la rama de main a master pero me desoriente y por las dudas volvi a dejar master

--- a/css/main.css
+++ b/css/main.css
@@ -262,6 +262,14 @@ a {
   background-color: #0056b3;
 }
 
+.radio-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
 /* ///////////////////Clases para Acordion de Boostrap FAQS/////////////////// */
 .custom-accordion-text {
   color: #243f68; /* Cambia el color del texto de las respuestas */
